# bad-therapy

./: CLAUDE.md  README.md
agent/: README.md  main.py  pyproject.toml  therapy_agents.py
server/: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
server/agent/: graph_builder.py  therapy_agents.py  types.py
server/agent/agents/: primary_therapist_agent.py  progress_tracker_agent.py  safety_agent.py  session_agent.py  specialist_agent.py
server/agents/: find_therapist_agent.py  primary_therapist_agent.py  safety_agent.py  session_name_agent.py
server/api/: ai.py  routes.py
server/core/: config.py
server/database/: connection.py  conversation_history.py  journal.py  journal_entries.py  mood_entries.py  user_profile.py
server/database/sql/: add_email_migration.sql  conversation_history.sql  journal.sql  journal_entries.sql  mood_entries.sql  user_profile.sql
server/evaluations/: __init__.py  debug_safety_scores.py  evaluation_runner.py  system_performance_evaluators.py  therapy_graph_evaluator.py  therapy_target_function.py
server/evaluations/core/: __init__.py  (+3 more)
server/graphs/: therapy_graph.py
server/models/: __init__.py  ai.py  billing.py  journal.py  journal_entries.py  message.py  mood.py  schemas.py  session.py  therapy.py  tips.py  user.py
server/nodes/: context_node.py  find_therapist_node.py  journal_insights_node.py  primary_therapist_node.py  router_node.py  safety_node.py
server/prompts/: chat_prompts.py  find_therapist_prompts.py  journal_prompts.py  router_prompts.py  safety_prompts.py  suggested_prompts.py  tips_prompts.py
server/routes/: ai.py  billing.py  journal.py  journal_entries.py  mood_entries.py  routes.py  sessions.py  tips.py  user_profile.py
server/service/: billing_service.py  journal_entries_service.py  journal_service.py  session_service.py  suggested_prompts_service.py  tips_service.py
server/services/: openai_service.py
server/tools/: save_to_journal_tool.py  search_mental_health_resources_tool.py  validate_resource_tool.py
server/utils/: billing_utils.py  jwt_bearer.py  message_utils.py  obfuscation.py  rate_limit_utils.py
(+149 files in other folders)
