[project]
name = "bad-therapy-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uv>=0.1.36",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=44.0.3",
    "langchain[openai]>=0.3.25",
    "langchain_perplexity>=0.1.1",
    "langgraph>=0.4.3",
    "supabase>=2.3.0",
    "python-jose>=3.3.0",
    "google-search-results>=2.4.2",
    "numpy>=2.2.6",
]
